[4.0] Fix Sidebar "sub items" overflow when expanding/toggle menu
Fix for the issue #33627

--- a/administrator/templates/atum/scss/blocks/_sidebar.scss
+++ b/administrator/templates/atum/scss/blocks/_sidebar.scss
@@ -8,6 +8,7 @@
 
   .sidebar-sticky {
     position: sticky;
+    overflow: hidden;
     top: 0;
   }
 
